# bero-agent

./: .gitignore  run_graph_cli.py  run_master_cli.py  test_rag.py  test_vectorstore.py
Bero/: langgraph.json  pyproject.toml  test_vacro.py
Bero/artifacts/: master_checkpoints.sqlite  master_checkpoints.sqlite-shm  master_checkpoints.sqlite-wal  master_history.db
Bero/artifacts/vectorstore/: index.pkl
Bero/auth/: main.py
Bero/data/seed/: locations.json
Bero/grpc/: bero_pb2_grpc.py  brain_server.py  client_test.py  test_robot_controller_client.py
Bero/src/agent/: __init__.py  master_graph_builder.py  robot_graph_builder.py
Bero/src/app/config/: settings.py
Bero/src/app/modules/master/: master_cli.py
Bero/src/app/modules/master/graph/: master_graph.py
Bero/src/app/modules/master/rag/: rag_service.py  vectorstore_utils.py
Bero/src/app/modules/master/services/: decision_service.py  executor_service.py  history_service.py  summarize_service.py  tool_call_service.py
Bero/src/app/modules/master/tools/: __init__.py  calendar_tool.py  gmail_tool.py  rag_tool.py  robot_tool.py  tasks_tool.py
Bero/src/app/modules/robot/: robot_cli.py
Bero/src/app/modules/robot/graph/: robot_graph.py
Bero/src/app/modules/robot/resources/: actions.json
Bero/src/app/modules/robot/services/: classify_intent_service.py  executor_service.py  mission_summary_service.py  navigation_service.py  planner_service.py  robot_grpc_client.py  validator_llm_service.py  (+2 more)
Bero/src/app/shared/: llm_factory.py  path_utils.py
Bero/tests/unit_tests/: test_configuration.py
(+47 files in other folders)
